# FlowEngine

./: .gitignore  Bundler.py  CMakeLists.txt  FlowContext.txt  LICENSE
Assets/Hero/: Hero.JSON
Assets/Levels/: Level_01.JSON
Configs/: Engine.ini
Flow/: CMakeLists.txt
Flow/src/: Application.cpp  Application.h  ConfigManager.h  Engine.cpp  Engine.h  EntryPoint.h
Flow/src/ECS/: Components.h
Flow/src/ECS/Systems/: AnimationSystem.h  CollisionSystem.h  PhysicsSystem.h  PlatformCollisionSystem.h  PlatformerMovementSystem.h  RenderSystem.h
Flow/src/Input/: InputContext.h  InputManager.cpp  InputManager.h  InputTypes.h  KeyMapper.cpp  KeyMapper.h  StringHash.h
Flow/src/MathLib/: CollisionMath.h
Flow/src/Physics/: CollisionMath.h  CollisionTypes.h
Flow/src/Utils/: AssetManager.h  ConfigManager.cpp  DebugOverlay.h  IniParser.cpp  IniParser.h  LevelManager.h  Log.h
Sandbox/: CMakeLists.txt
Sandbox/src/: SandboxApp.cpp
